--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,14 @@
 {
-  "engines": {
-    "node": "20.x"
-  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echp \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
