--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": ".js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "name": "amazon-clone",
+  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
