--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 DATABASE = mongodb+srv://Cloudzy:Cloudzy@social.bj6q0az.mongodb.net/AmazonWeb?retryWrites=true&w=majority&appName=Social
 KEY = CloudzyAmitKumarRekhaDeviNishaKumariAniketKumar
+NODE_ENV=production
